--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,1 @@
-.page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 800px;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-form {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.movies {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-
-    width: 100%;
-    gap: 32px;
-}
-
-.movie {
-    text-align: center;
-}
-
-.movie h3,
-.movie p {
-    margin: 0;
-}
-
-.movie img {
-    border-radius: 8px;
-    margin-top: 16px;
-}
-
-.inputError {
-    border: 1px solid red;
-    border-color: darkred;
-}
+@import '~/semantic-ui-css/semantic.min.css';
